--- a/templates/layout/header.phtml
+++ b/templates/layout/header.phtml
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto de Bolsos</title>
-
-    <!-- Enlace al archivo CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">    
 </head>
 <body>
     <header>
         <h1>Bienvenidos a la tienda de Bolsos</h1>
         <nav>
             <ul>
-                <li><a href="bolsos">Inicio</a></li>
-                <li><a href="<?php echo BASE_URL; ?>agregar">Agregar Bolsos</a></li>
-                <li><a href="<?php echo BASE_URL; ?>bolsos">Lista de Bolsos</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>bolsos">Inicio</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>formulario">Agregar Bolsos</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>bolsos">Lista de Bolsos</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>categorias">Categorias</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>cuenta">Cuenta</a></li>
+                <li class="nav1"><a href="<?php echo BASE_URL; ?>formulario2">Agregar Categoria</a></li>
+            </form>
+        </li>
             </ul>
         </nav>
     </header>
